docs: add docs for delete opening
